[package]
name = "cai-bakery"
version = "0.1.0"
authors = ["Aishwarya Krishnan <aishwarya.krishnan92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cron-parser = "0.7.6"
chrono = "0.4.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"